--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-```html
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -105,7 +105,7 @@
     <div class="grid grid-2">
       <div class="card">
         <h3>B.Tech CSE</h3>
-        <p>Your College Name (2024 – 2028)</p>
+        <p>CUxSU (2025 – 2029)</p>
       </div>
       <div class="card">
         <h3>School</h3>
